data/derived/fa15/progs/unify/prog3357.ml.out
Characters 24-31:
  List.map string_of_int [123,456];;
                          ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
